# sg-ecg-tool-pythonpackage

./: CONTRIBUTING.rst  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  make.bat
docs/_build/doctrees/: conduct.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
docs/_build/doctrees/source/: modules.doctree  sg_ecg_tool.doctree
docs/_build/html/: .buildinfo  conduct.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/sg_ecg_tool/: sg_ecg_tool.html
docs/_build/html/_sources/: installation.rst.txt  usage.rst.txt
docs/_build/html/_sources/source/: modules.rst.txt  sg_ecg_tool.rst.txt
docs/_build/html/source/: modules.html  sg_ecg_tool.html
sg_ecg_tool/: sg_ecg_tool.py
sg_ecg_tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_sg_ecg_tool.py
